Update to support EventBus7